--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,11 @@
-pipeline:
-  perl5_28_0:
+kind: pipeline
+name: cpanm
+steps:
+  - name: cpanm with test
     image: perl:5.28.0
     commands:
       - bash cpanm-install-recent.sh
+  - name: cpanm notest
+    image: perl:5.28.0
+    commands:
+      - bash cpanm-install-notest-recent.sh
