[CI] fix config.

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,12 +4,14 @@ name: cpanm
 steps:
   - name: cpanm notest
     image: perl:5.28.0
-    depends_on: clone
+    depends_on:
+      - clone
     commands:
       - bash cpanm-install-notest-recent.sh
   - name: cpanm with test
     image: perl:5.28.0
-    depends_on: clone
+    depends_on:
+      - clone
     commands:
       - bash cpanm-install-recent.sh
 
@@ -24,11 +26,13 @@ platform:
 steps:
   - name: cpanm notest
     image: perl:5.28.0
-    depends_on: clone
+    depends_on:
+      - clone
     commands:
       - bash cpanm-install-notest-recent.sh
   - name: cpanm with test
     image: perl:5.28.0
-    depends_on: clone
+    depends_on:
+      - clone
     commands:
       - bash cpanm-install-recent.sh
