--- a/.drone.yml
+++ b/.drone.yml
@@ -7,10 +7,10 @@ steps:
     depends_on:
       - clone
     environment:
-      FEEDRO_TOEKN_NOTEST_FAIL:
-        from_secret: FEEDRO_TOEKN_NOTEST_FAIL
-      FEEDRO_TOEKN_NOTEST_SUCCESS:
-        from_secret: feedro_toekn_notest_success
+      FEEDRO_TOKEN_NOTEST_FAIL:
+        from_secret: FEEDRO_TOKEN_NOTEST_FAIL
+      FEEDRO_TOKEN_NOTEST_SUCCESS:
+        from_secret: FEEDRO_TOKEN_NOTEST_SUCCESS
     commands:
       - bash cpanm-install-notest-recent.sh
   - name: cpanm with test
@@ -18,9 +18,9 @@ steps:
     depends_on:
       - clone
     environment:
-      FEEDRO_TOEKN_FAIL:
-        from_secret: FEEDRO_TOEKN_FAIL
-      FEEDRO_TOEKN_SUCCESS:
-        from_secret: FEEDRO_TOEKN_SUCCESS
+      FEEDRO_TOKEN_FAIL:
+        from_secret: FEEDRO_TOKEN_FAIL
+      FEEDRO_TOKEN_SUCCESS:
+        from_secret: FEEDRO_TOKEN_SUCCESS
     commands:
       - bash cpanm-install-recent.sh
