--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ git:
   depth: 1
 
 script:
-  -  bash ./cpanm-install-notest-recent.sh
+  - bash --version
+  - bash ./cpanm-install-notest-recent.sh
