Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 steps:
 - script: |
-    apt install cpanminus
+    sudo apt-get install cpanminus
   displayName: install cpanm
 
 - script: |
