add author name.

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,7 @@ steps:
     depends_on:
       - clone
     environment:
+      FEEDRO_AUTHOR_NAME: DroneCI
       FEEDRO_TOKEN_CPANM_NOTEST:
         from_secret: FEEDRO_TOKEN_CPANM_NOTEST
     commands:
