--- a/.github/workflows/recent-notest.yml
+++ b/.github/workflows/recent-notest.yml
@@ -11,6 +11,6 @@ jobs:
       image: perl:5.32
     runs-on: ubuntu-latest
     steps:
-      - run: bash ./cpanm-install-notest-recent.sh
+      - run: bash cpanm-install-notest-recent.sh
         env:
           FEEDRO_AUTHOR_NAME: GithubAction
