--- a/.github/workflows/recent-notest.yml
+++ b/.github/workflows/recent-notest.yml
@@ -15,3 +15,4 @@ jobs:
       - run: bash cpanm-install-notest-recent.sh
         env:
           FEEDRO_AUTHOR_NAME: GithubAction
+          FEEDRO_TOKEN_CPANM: ${{ secrets.FEEDRO_TOKEN_CPANM }}
