--- a/.github/workflows/recent-notest.yml
+++ b/.github/workflows/recent-notest.yml
@@ -7,12 +7,15 @@ on:
 
 jobs:
   run:
-    container:
-      image: perl:5.32
+    strategy:
+      matrix:
+        perl: [ "perl:5.32", "perl:5.30" ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: bash cpanm-install-notest-recent.sh
+        container:
+          image: ${{ matrix.perl }}
         env:
           FEEDRO_AUTHOR_NAME: GithubAction
           FEEDRO_TOKEN_CPANM_NOTEST: ${{ secrets.FEEDRO_TOKEN_CPANM_NOTEST }}
